[package]
name = "exile-log-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
regex = "1.12"
sysinfo = "0.39"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.30"
