[package]
name = "exile-log-api"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
regex = "1.12"
sysinfo = "0.39"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.30"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
